# ACTECGit

./: frames_2025-06-12_14.08.40.gv  frames_2025-06-12_14.34.01.gv  frames_2025-07-05_20.16.36.gv  frames_2025-07-05_20.17.35.gv  frames_2025-07-05_20.24.05.gv  my_map.pgm  my_map.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lidar_odometry/lib/lidar_odometry/: lidar_odometry_node  qr_publisher  wall_marker_node
install/lidar_odometry/share/ament_index/resource_index/package_run_dependencies/: lidar_odometry
install/lidar_odometry/share/ament_index/resource_index/parent_prefix_path/: lidar_odometry
install/lidar_odometry/share/lidar_odometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_odometry/share/lidar_odometry/cmake/: lidar_odometryConfig-version.cmake  lidar_odometryConfig.cmake
install/lidar_odometry/share/lidar_odometry/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/Simple-2D-LiDAR-Odometry/: CMakeLists.txt
src/Simple-2D-LiDAR-Odometry/src/: lidar_odometry_node.cpp  qr_publisher.cpp  wall_marker_node.cpp
